@@ -1780,6 +1780,72 @@ class Releases
 		return $tot_nzbcount;
 	}
 
+	public function processReleasesStage5b($groupID, $echooutput=false)
+	{
+		$db = new DB();
+		$page = new Page();
+		$n = "\n";
+		$consoletools = new consoleTools();
+
+		$where = (!empty($groupID)) ? " AND groupID = ".$groupID : "";
+		
+		if ($page->site->lookup_reqids == 1)
+		{
+			$stage8 = TIME();
+			if ($this->echooutput)
+				echo $n."\033[1;33mStage 5b -> Request ID lookup.\033[0m".$n;
+
+			// Mark records that don't have regex titles
+			$db->query( "UPDATE releases SET reqidstatus = -1 " .
+						"WHERE reqidstatus = 0 AND relnamestatus = 1 AND name REGEXP '^\\[[[:digit:]]+\\]' = 0 " . $where);
+						
+			// look for records that potentially have regex titles
+			$resrel = $db->queryDirect( "SELECT r.ID, r.name, g.name groupName " .
+										"FROM releases r LEFT JOIN groups g ON r.groupID = g.ID " .
+										"WHERE relnamestatus = 1 AND reqidstatus = 0 AND r.name REGEXP '^\\[[[:digit:]]+\\]' = 1 " . $where);
+										
+			$iFoundcnt = 0;
+			
+			while ($rowrel = $db->fetchAssoc($resrel))
+			{
+				// Try to get reqid
+				$requestIDtmp = explode("]", substr($rowrel['name'], 1));
+				$bFound = false;
+				$newTitle = "";
+
+				if (count($requestIDtmp) >= 1)
+				{
+					$requestID = (int) $requestIDtmp[0];
+					if ($requestID != 0)
+					{
+						$newTitle = $this->getReleaseNameFromRequestID($page->site, $requestID, $rowrel['groupName']);
+						if ($newTitle != false && $newTitle != "")
+						{
+							$bFound = true;
+							$iFoundcnt++;
+						}
+					}
+				}
+				
+				if ($bFound)
+				{
+					$db->query("UPDATE releases SET reqidstatus = 1, searchname = " . $db->escapeString($newTitle) . " WHERE ID = " . $rowrel['ID']);
+			
+					if ($this->echooutput)
+						echo "Updated requestID " . $requestID . " to release name: ".$newTitle.$n;
+				}					
+				else
+				{
+					$db->query("UPDATE releases SET reqidstatus = -2 WHERE ID = " . $rowrel['ID']);
+				}
+			}			
+
+			$timing = $consoletools->convertTime(TIME() - $stage8);
+			if ($this->echooutput)
+				echo $iFoundcnt . " Releases updated in " . $timing . ".";			
+		}
+	}
+	
 	public function processReleasesStage6($categorize, $postproc, $groupID, $echooutput=false)
 	{
 		$db = new DB();
@@ -1996,6 +2062,7 @@ class Releases
 			$tot_retcount = $tot_retcount + $retcount;
 			$this->processReleasesStage4dot5($groupID, $echooutput=false);
 			$nzbcount = $this->processReleasesStage5($groupID);
+			$this->processReleasesStage5b($groupID, $echooutput);
 			$tot_nzbcount = $tot_nzbcount + $nzbcount;
 			$this->processReleasesStage6($categorize, $postproc, $groupID, $echooutput=false);
 			$this->processReleasesStage7a($groupID, $echooutput=false);
@@ -2214,5 +2281,24 @@ class Releases
 							GROUP BY concat(cp.title, ' > ', category.title)
 							ORDER BY COUNT(*) DESC");
 	}
+	
+	public function getReleaseNameFromRequestID($site, $requestID, $groupName)
+	{
+		if ($site->request_url == "")
+			return "";
+		
+		// Build Request URL
+		$req_url = str_ireplace("[GROUP_NM]", urlencode($groupName), $site->request_url);
+		$req_url = str_ireplace("[REQUEST_ID]", urlencode($requestID), $req_url);
+		
+		$xml = simplexml_load_file($req_url);
+		
+		if (($xml == false) || (count($xml) == 0))
+			return "";
+			
+		$request = $xml->request[0];
+
+		return (!isset($request) || !isset($request["name"])) ? "" : $request['name'];
+	}		
 
 }
